--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\tomjo\\anaconda3\\envs\\fyp\\python.exe"
+    "python.pythonPath": "C:\\Users\\Tom\\anaconda3\\envs\\fyp\\python.exe"
 }
